[package]
name = "champsim_trace_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "champsim_trace_reader"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
